--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -16,6 +16,8 @@ table {
     border-style: solid;
 }
 
-td {
-    background-image: url(https://picsum.photos/200/200);
+img{
+    max-width: 100%;
+    max-height: 100%;
+    display: block; /* remove extra space below image */
 }
