add flash attribute

--- a/src/main/resources/templates/Lobby/HomePage.html
+++ b/src/main/resources/templates/Lobby/HomePage.html
@@ -14,8 +14,10 @@
     </form>
 
     <script th:inline="javascript">
-        alert("aaa");
-        alert([[${errorMessage}]]);
+        var error = [[${errorMessage}]];
+        if(error !== null){
+            alert(error);
+        }
     </script>
 
 
