--- a/src/main/resources/templates/Room/Room.html
+++ b/src/main/resources/templates/Room/Room.html
@@ -11,5 +11,7 @@
 <body>
 <div>aaaaaaaaaaa</div>
 <button id = "getNewGameButton">Start a new Game</button>
+<div id="roomKey" th:text="${roomKey}"></div>
+
 </body>
 </html>
